--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.bib
@@ -308,9 +308,13 @@
 	publisher={Springer}
 }
 
-@article{kunapuli2008bilevel,
-	title={Bilevel model selection for support vector machines},
-	author={Kunapuli, Gautam and Bennett, K and Hu, Jing and Pang, Jong-Shi},
-	journal={Manuscript, Department of Mathematical Sciences, Rensselaer Polytechnic Institute (March 2007)},
-	year={2008}
+@article{tibshirani2013lasso,
+  title={The lasso problem and uniqueness},
+  author={Tibshirani, Ryan J and others},
+  journal={Electronic Journal of Statistics},
+  volume={7},
+  pages={1456--1490},
+  year={2013},
+  publisher={The Institute of Mathematical Statistics and the Bernoulli Society}
 }
+
