--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
@@ -314,3 +314,21 @@
 	journal={Manuscript, Department of Mathematical Sciences, Rensselaer Polytechnic Institute (March 2007)},
 	year={2008}
 }
+
+@article{fithian2013scalable,
+  title={Scalable Convex Methods for Flexible Low-Rank Matrix Modeling},
+  author={Fithian, William and Mazumder, Rahul},
+  journal={arXiv preprint arXiv:1308.4211},
+  year={2013}
+}
+
+@inproceedings{papadopoulo2000estimating,
+  title={Estimating the jacobian of the singular value decomposition: Theory and applications},
+  author={Papadopoulo, Th{\'e}odore and Lourakis, Manolis IA},
+  booktitle={European Conference on Computer Vision},
+  pages={554--570},
+  year={2000},
+  organization={Springer}
+}
+
+
